@@ -3,9 +3,8 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- *
+ * SPDX-License-Identifier: MPL-2.0
  */
-
 package com.powsybl.metrix.mapping.timeseries;
 
 import com.powsybl.commons.PowsyblException;
@@ -145,7 +144,7 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
             .map(timeSeries -> getTimeSeries(timeSeries.getKey(), timeSeries.getValue(), version))
             .filter(Objects::nonNull)
             .map(timeSeriesTypeClass::cast)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @Override
